--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,26 +3,135 @@
   <div class="box" id="heading">
     <h1> <%= listTitle %> </h1>
   </div>
+  
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProductModal">
+    Add Product
+  </button>
+  
+  <!-- Add Product Modal -->
+  <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addProductModalLabel">Add Product</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Please fill out the form to add a product to the inventory
+          <form id="addProductForm" action="/add" method="post">
+            <div class="form-group row">
+              <label for="addProductName" class="col-sm-2 col-form-label">Name</label>
+              <div class="col-sm-10">
+                <input name="productName" type="text" class="form-control" id="addProductName" placeholder="Name of the Product">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="addProductStock" class="col-sm-2 col-form-label">Stock</label>
+              <div class="col-sm-10">
+                <input name="productStock" type="text" class="form-control" id="addProductStock" placeholder="Quantity of the Product">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="addProductAisle" class="col-sm-2 col-form-label">Aisle</label>
+              <div class="col-sm-10">
+                <input name="productAisle" type="text" class="form-control" id="addProductAisle" placeholder="Aisle Number">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="addProductLoc" class="col-sm-2 col-form-label">Location</label>
+              <div class="col-sm-10">
+                <input name="productLoc" type="text" class="form-control" id="addProductLoc" placeholder="Location of the Product">
+              </div>
+            </div>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+      </form>
+      </div>
+    </div>
+  </div>
 
-  <table>
+  <table class="table">
     <tr>
+      <th>ID</th>
       <th>Name</th>
       <th>Stock</th>
       <th>Aisle</th>
       <th>Location</th>
+      <th></th>
     </tr>
     
     <%  productList.forEach(function(product){ %>
       <tr>
+        <td><%=product._id%></td>
         <td><%=product.name%></td>
         <td><%=product.stock%></td>
         <td><%=product.aisle%></td>
         <td><%=product.location%></td>
+        <td>
+          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#editProductModal_<%=product._id%>">
+            Edit Product
+          </button>
+          <!-- Edit Product Modal -->
+          <div class="modal fade" id="editProductModal_<%=product._id%>" tabindex="-1" role="dialog" aria-labelledby="editProductModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="editProductModalLabel">Edit Product</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Please edit the values and click on save
+                  <form action="/edit" method="post">
+                    <input name="productId" type="hidden" value="<%=product.id%>">
+                    <div class="form-group row">
+                      <label for="editProductName" class="col-sm-2 col-form-label">Name</label>
+                      <div class="col-sm-10">
+                        <input name="productName" type="text" class="form-control" id="editProductName" value="<%=product.name%>">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label for="editProductStock" class="col-sm-2 col-form-label">Stock</label>
+                      <div class="col-sm-10">
+                        <input name="productStock" type="text" class="form-control" id="editProductStock" value="<%=product.stock%>">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label for="editProductAisle" class="col-sm-2 col-form-label">Aisle</label>
+                      <div class="col-sm-10">
+                        <input name="productAisle" type="text" class="form-control" id="editProductAisle" value="<%=product.aisle%>">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label for="editProductLoc" class="col-sm-2 col-form-label">Location</label>
+                      <div class="col-sm-10">
+                        <input name="productLoc" type="text" class="form-control" id="editProductLoc" value="<%=product.location%>">
+                      </div>
+                    </div>
+                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+              </form>
+              </div>
+            </div>
+          </div>
+        </td>
       </tr>
     <%  }) %>
   </table>
 
 
-  
+
+
 
 <%- include("footer") -%>
