--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
   min-height: 1000px;
@@ -93,4 +93,31 @@ footer {
   color: white;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+} */
+
+button.showHover{
+  visibility: hidden;
+}
+tr:hover button.showHover{ 
+  visibility: visible;
+}
+/* table {
+  width: 60% !important;
+  margin: 0px auto;
+} */
+
+td {
+  vertical-align: middle !important;
+}
+
+#heading {
+  margin-bottom: 2%;
+}
+
+html {
+  margin: 1%;
+}
+
+.menu-row {
+  margin-bottom: 1%;
 }
