--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,8 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>To Do List</title>
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+  <div class="box" id="heading">
+    <h1> Shopify Fall 2022 Challenge </h1>
+  </div>
