--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,87 +1,100 @@
 <%- include("header") -%>
 
-  <div class="box" id="heading">
-    <h1> <%= listTitle %> </h1>
-  </div>
-  
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProductModal">
-    Add Product
-  </button>
-  <a href="/trash">
-    <button>
-      trash
+
+<h3>Items</h3>
+<p>Hover over an item to edit or delete it.</p>
+  <div class="menu-row">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProductModal">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 2 16 16">
+        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"></path>
+      </svg>
+      Add
     </button>
-  </a>
-  
-  <!-- Add Product Modal -->
-  <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="addProductModalLabel">Add Product</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+    <a href="/trash">
+      <button type="button" class="btn btn-secondary">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+        </svg>
+        Trash
+      </button>
+    </a>
+
+    <!-- Add Product Modal -->
+    <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addProductModalLabel">Add product</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Please fill out the form to add a product to the inventory
+            <form id="addProductForm" action="/add" method="post">
+              <div class="form-group row">
+                <label for="addProductName" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                  <input name="productName" type="text" class="form-control" id="addProductName" placeholder="Product Name [Required]" required>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="addProductStock" class="col-sm-2 col-form-label">Stock</label>
+                <div class="col-sm-10">
+                  <input name="productStock" type="number" min="0" class="form-control" id="addProductStock" placeholder="Quantity [Number]">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="addProductAisle" class="col-sm-2 col-form-label">Aisle</label>
+                <div class="col-sm-10">
+                  <input name="productAisle" type="text" class="form-control" id="addProductAisle" placeholder="Aisle Number">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="addProductLoc" class="col-sm-2 col-form-label">Location</label>
+                <div class="col-sm-10">
+                  <input name="productLoc" type="text" class="form-control" id="addProductLoc" placeholder="Location of the Product">
+                </div>
+              </div>
+            
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+          </div>
+        </form>
         </div>
-        <div class="modal-body">
-          Please fill out the form to add a product to the inventory
-          <form id="addProductForm" action="/add" method="post">
-            <div class="form-group row">
-              <label for="addProductName" class="col-sm-2 col-form-label">Name</label>
-              <div class="col-sm-10">
-                <input name="productName" type="text" class="form-control" id="addProductName" placeholder="Name of the Product">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="addProductStock" class="col-sm-2 col-form-label">Stock</label>
-              <div class="col-sm-10">
-                <input name="productStock" type="text" class="form-control" id="addProductStock" placeholder="Quantity of the Product">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="addProductAisle" class="col-sm-2 col-form-label">Aisle</label>
-              <div class="col-sm-10">
-                <input name="productAisle" type="text" class="form-control" id="addProductAisle" placeholder="Aisle Number">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="addProductLoc" class="col-sm-2 col-form-label">Location</label>
-              <div class="col-sm-10">
-                <input name="productLoc" type="text" class="form-control" id="addProductLoc" placeholder="Location of the Product">
-              </div>
-            </div>
-          
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Save changes</button>
-        </div>
-      </form>
       </div>
     </div>
   </div>
-
-  <table class="table">
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Stock</th>
-      <th>Aisle</th>
-      <th>Location</th>
-      <th></th>
-      <th></th>
-    </tr>
+  <table class="table table-bordered table-hover table-striped">
     
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Stock</th>
+        <th>Aisle</th>
+        <th>Location</th>
+        <th>ID</th>
+        <th></th>
+        
+      </tr>
+  </thead>
+    <% var count = 1 %>
     <%  productList.forEach(function(product){ %>
       <tr>
-        <td><%=product._id%></td>
+        
+        <td><%=count%></td>
         <td><%=product.name%></td>
         <td><%=product.stock%></td>
         <td><%=product.aisle%></td>
         <td><%=product.location%></td>
+        <td><%=product._id%></td>
         <td>
-          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#editProductModal_<%=product._id%>">
-            Edit Product
+          <button type="button" class="btn btn-secondary showHover" data-toggle="modal" data-target="#editProductModal_<%=product._id%>">
+            Edit
           </button>
           <!-- Edit Product Modal -->
           <div class="modal fade" id="editProductModal_<%=product._id%>" tabindex="-1" role="dialog" aria-labelledby="editProductModalLabel" aria-hidden="true">
@@ -100,25 +113,25 @@
                     <div class="form-group row">
                       <label for="editProductName" class="col-sm-2 col-form-label">Name</label>
                       <div class="col-sm-10">
-                        <input name="productName" type="text" class="form-control" id="editProductName" value="<%=product.name%>">
+                        <input name="productName" type="text" class="form-control" id="editProductName" value="<%=product.name%>" placeholder="Product Name [Required]" required>
                       </div>
                     </div>
                     <div class="form-group row">
                       <label for="editProductStock" class="col-sm-2 col-form-label">Stock</label>
                       <div class="col-sm-10">
-                        <input name="productStock" type="text" class="form-control" id="editProductStock" value="<%=product.stock%>">
+                        <input name="productStock" type="number" min="0" class="form-control" id="editProductStock" value="<%=product.stock%>" placeholder="Quantity [Number]">
                       </div>
                     </div>
                     <div class="form-group row">
                       <label for="editProductAisle" class="col-sm-2 col-form-label">Aisle</label>
                       <div class="col-sm-10">
-                        <input name="productAisle" type="text" class="form-control" id="editProductAisle" value="<%=product.aisle%>">
+                        <input name="productAisle" type="text" class="form-control" id="editProductAisle" value="<%=product.aisle%>" placeholder="Aisle Number">
                       </div>
                     </div>
                     <div class="form-group row">
                       <label for="editProductLoc" class="col-sm-2 col-form-label">Location</label>
                       <div class="col-sm-10">
-                        <input name="productLoc" type="text" class="form-control" id="editProductLoc" value="<%=product.location%>">
+                        <input name="productLoc" type="text" class="form-control" id="editProductLoc" value="<%=product.location%>" placeholder="Location of the Product">
                       </div>
                     </div>
                   
@@ -131,10 +144,10 @@
               </div>
             </div>
           </div>
-        </td>
-        <td>
-          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteProductModal_<%=product._id%>">
-            Delete Product
+        <!-- </td>
+        <td> -->
+          <button type="button" class="btn btn-danger showHover" data-toggle="modal" data-target="#deleteProductModal_<%=product._id%>">
+            Delete
           </button>
           <div class="modal fade" id="deleteProductModal_<%=product._id%>" tabindex="-1" role="dialog" aria-labelledby="deleteProductModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -166,6 +179,7 @@
           </div>
         </td>
       </tr>
+      <% count++ %>
     <%  }) %>
   </table>
 
